2000-10-20  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* proto/Makefile.in, packaging/Makefile.in:
	    'make install' will install also 'doc/guides/*' files
	    into $MAILSHARE/guides/  -- there seems to be call for
	    those files from some users...  In other environs,
	    like Linux distributions, there could be some sort
	    of  /usr/share/doc/zmailer-NNN/guides/ for them.

	* doc/guides/smtp-policy, utils/policy-builder.sh.in:
	    Defined ".manual" versions for ".mx", and ".relay"
	    of  smtp-policy driver files.  This enables more
	    wide-spread automated data fill-in, plus local
	    ".manual overrides".

2000-10-17  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* transports/libta/ctlopen.c:
	    Return NULL, not 'void' in certain silence case.

	* transports/libta/diagnostic.c:
	    Try not to do so verbose diagnostic report over
	    syslog as via TA->scheduler channel.

	* smtpserver/smtpdata.c:
	    Parse possible "contentpolicy" analysis report, and present
	    it (in several cases) to the user.

	* smtpserver/smtphelp.c:
	    Small fixes for help presentation, and parameter recognition.

2000-10-16  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* smtpserver/smtpdata.c, smtpserver/smtphelp.c, smtpserver/smtptls.c,
	  smtpserver/smtpserver.c:
	    Rethought of things, killed the Z_printf() abomination.
	    Also fixed inadverent NULL referral which Eugene Crosser
	    found as well.  (It blocked my incoming email :-( )

	* man/smtpserver.8, smtpserver/contentfilter.c, smtpserver/smtpdata.c:
	    Improved documentation of the CONTENTFILTER INTERFACE
	    ( = wrote it ), and modified a bit of the interface itself.

	* configure.in, proto/smtpserver.conf, smtpserver/cfgread.c,
	  man/smtpserver.8, proto/Makefile.in, 
	    Allow $ZENV expansions in smtpserver's configuration.
	    Thus allow simpler moving of the thing to other location
	    without needing to edit anything but  zmailer.conf  file..