@@ -1,3 +1,12 @@
+2000-10-23  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>
+
+	* utils/mxverify/mxverify-cgi.c:
+	    Small text changes.
+
+	* transports/smtp/smtp.c:
+	    Noticed a few places where we need to reset the
+	    "SS->rcptstates" variable.
+
 2000-10-20  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>
 
 	* proto/Makefile.in, packaging/Makefile.in:
